--- a/app/views/static/info.html.erb
+++ b/app/views/static/info.html.erb
@@ -1,9 +1,43 @@
-When: Jul 27th - 29th
-Where: 
-http://www.allseasonsvacationrents.com/Unit.mvc/Details/39403
-http://www.allseasonsvacationrents.com/Unit.mvc/Details/58472
-Why: Higgins Twins 30th Birthday
-Price: 
-  <div>$50 for one outdoor tent and up to two individuals.</div>
-  <div class="or">OR</div>
-  <div>$50 for one bed inside.</div>
+<div id="info">
+  <div id="header">
+    <h1>30th Birthday</h1>
+    <h2>Jul 27th - 29th • 80 Timber Road Cle Elum, WA</h2>
+  </div>
+  <div id="wrap">
+    <section>
+      <h1>Info</h1>
+      <p>
+        Come celebrate the 30th Birthday of Jason &amp; Matthew Higgins.
+      </p>
+      <p>
+        We have two adjacent lodges in Cle Elum.
+        Entertainment includes horseshoes, two hot tubs, volleyball, foosball, along with open areas for other games.
+        There has also been some rumors about a Slip N' Slide.
+      </p>
+      <p>
+        Guests can arrive and depart at any time between the afternoon of Friday, July 27th and the morning of Sunday, July 29th.
+        There are two price options:
+      </p>
+      <ul id="prices">
+        <li><strong>$50</strong> for up to two individuals in an outdoor tent.</li>
+        <li><strong>$50</strong> for one bed inside.</li>
+      </ul>
+      <p>
+        Food and spirits will be provided. This means eggs, bacon, kegs, and BBQing.
+      </p>
+      <p>
+        To RSVP, contact <%= mail_to 'me@matthewhiggins.com', 'Matthew Higgins'  %>.
+      </p>
+      <h1>Images</h1>
+      <div id="images">
+        <%= image_tag '1832516508.jpeg' %>
+        <%= image_tag '1359294938.jpeg' %>
+        <%= image_tag '0417493868.jpeg' %>
+        <%= image_tag '2102702578.jpeg' %>
+        <%= image_tag '1596153648.jpeg' %>
+        <%= image_tag '2142918453.jpeg' %>
+        <%= image_tag '1338358365.jpeg' %>
+      </div>
+    </section>
+  </div>
+</div>
