--- a/app/views/static/info.html.erb
+++ b/app/views/static/info.html.erb
@@ -12,16 +12,12 @@
       <p>
         We have two adjacent lodges in Cle Elum.
         Entertainment includes horseshoes, two hot tubs, volleyball, foosball, along with open areas for other games.
-        There has also been some rumors about a Slip N' Slide.
+        There have also been some rumors about a Slip N' Slide.
       </p>
       <p>
         Guests can arrive and depart at any time between the afternoon of Friday, July 27th and the morning of Sunday, July 29th.
-        There are two price options:
+        The price for everyone is <strong>$50</strong>, and you can choose to sleep indoors or to bring a tent.
       </p>
-      <ul id="prices">
-        <li><strong>$50</strong> for up to two individuals in an outdoor tent.</li>
-        <li><strong>$50</strong> for one bed inside.</li>
-      </ul>
       <p>
         Food and spirits will be provided. This means eggs, bacon, kegs, and BBQing.
       </p>
